<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/title"
        style="@style/TextColor"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/askToAddNewItem"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="22dp" />

    <Button
        android:id="@+id/addItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_item_to_the_inventory_to_help_others"
        android:textAllCaps="false" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="22dp" />

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_time"
        android:layout_gravity="center"
        android:textAllCaps="false"/>


</LinearLayout>