<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="15dp"
    android:paddingTop="8dp"
    android:paddingEnd="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/rounded_rectangle_yellow"
        android:padding="6dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/neighborsPic"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="start"
            android:contentDescription="@string/neighborPicture"
            android:src="@drawable/profile"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/itemName"
                style="@style/TextColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/item_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/neighborRequestDesc"
                style="@style/TextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="-6dp"
                android:text="@string/request_item_from_neighbor_message"
                android:textSize="11sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>