<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestActivity">

    <LinearLayout
        android:id="@+id/textViewItemName"
        android:layout_width="match_parent"
        android:layout_height="147dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:background="@drawable/frame_large"
        android:orientation="vertical">

        <TextView
            android:id="@+id/requestDetailsTitle"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_gravity="center"
            android:background="@color/fui_transparent"
            android:gravity="center"
            android:text="@string/public_request_title" />

        <Space
            android:layout_width="427dp"
            android:layout_height="13dp" />

        <TextView
            android:id="@+id/requestDetailsOriginalMessage"
            android:layout_width="342dp"
            android:layout_height="86dp"
            android:layout_gravity="center"
            android:background="@drawable/frame_large"
            android:gravity="center"
            android:text="@string/item_name" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/chat"
        android:layout_width="match_parent"
        android:layout_height="536dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/frame_large"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/frame_large"
        android:padding="5dp">

        <EditText
            android:id="@+id/editRequestMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_toStartOf="@+id/buttonSend"
            android:autofillHints="@string/neighborly_help_message"
            android:background="@android:color/transparent"
            android:hint="@string/messageHint" />

        <ImageButton
            android:id="@+id/buttonSend"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:background="@color/fui_transparent"
            android:contentDescription="@string/com_facebook_send_button_text"
            android:src="@drawable/send" />

    </RelativeLayout>

</RelativeLayout>